--- a/index.html
+++ b/index.html
@@ -85,27 +85,27 @@
       </tr>
     <tr>
         <td>Task1</td>
-        <td><a href="./Task-1.css" target="_blank">Link</a></td>
+        <td><a href="./css_Task-1.html" target="_blank">Link</a></td>
     </tr>
     <tr>
         <td>Task2</td>
-        <td><a href="./Task-2.css" target="_blank">Link</a></td>
+        <td><a href="./css_Task-2.html" target="_blank">Link</a></td>
     </tr>
     <tr>
         <td>Task3</td>
-        <td><a href="./Task-3.css" target="_blank">Link</a></td>
+        <td><a href="./css_Task-3.html" target="_blank">Link</a></td>
     </tr>
     <tr>
         <td>Task4</td>
-        <td><a href="./Task-4.css" target="_blank">Link</a></td>
+        <td><a href="./css_Task-4.html" target="_blank">Link</a></td>
     </tr>
     <tr>
         <td>Task5</td>
-        <td><a href="./Task-5.css" target="_blank">Link</a></td>
+        <td><a href="./css_Task-5.html" target="_blank">Link</a></td>
     </tr>
     <tr>
         <td>Task6</td>
-        <td><a href="./Task-6.css" target="_blank">Link</a></td>
+        <td><a href="./css_Task-6.html" target="_blank">Link</a></td>
     </tr>
   </table>
   <br>
