--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
         <td>Task6</td>
         <td><a href="./css_Task-6.html" target="_blank">Link</a></td>
     </tr>
+    <tr>
+        <td>Task7</td>
+        <td><a href="./css_Task-7.html" target="_blank">Link</a></td>
+    </tr>
   </table>
   <br>
   <p>Madepalli Mukesh Sai</p>
